# orp

./: README.md  mainpage.dox
documentation/: Doxyfile  Makefile
hardware/: .gitignore  README.md  devenv-settings.sh
hardware/mselSoC/: .gitignore  README.md  mselSoC.dox
hardware/mselSoC/src/: fusesoc.conf  geophyte.cmd  geophyte_fpga.cmd
hardware/mselSoC/src/systems/geophyte/: geophyte.core  geophyte.system
hardware/mselSoC/src/systems/geophyte/data/: geophyte.ucf  options.tcl  wb_intercon.conf
hardware/mselSoC/src/systems/geophyte/rtl/verilog/: bootrom.v  bootrom_data.vh  clkgen.v  orpsoc_top.v  wb_intercon.v  wb_intercon.vh
hardware/mselSoC/src/systems/geophyte/rtl/verilog/include/: or1200_defines.v  orpsoc-defines.v  uart_defines.v
hardware/mselSoC/src/systems/geophyte/sw/: romgen  romgen.c
hardware/openocd/: geophyte2.cfg  openocd.sh  or1200.cfg
platform/or1k/: .gitignore  Makefile  ORP.mk  README.md  Tools.mk  devenv-settings.sh
software/android/orp-android/: README.md  orp-android.dox  settings.gradle
software/android/orp-android/app/: build.gradle
software/android/orp-android/app/src/androidTest/java/orp/orp/: EdwardsCurveTest.java  EdwardsPairTest.java  IPEchoTest.java  IPEncTest.java  IPTestUrChat.java  IPXtsTest.java  ORPProviderTest.java  PrimeFieldTest.java
software/android/orp-android/app/src/main/: AndroidManifest.xml
software/android/orp-android/app/src/main/java/orp/orp/: ControlSession.java  Endpoint.java  FileBus.java  FileReadChannel.java  IBus.java  (+12 more)
software/android/orp-android/app/src/main/jni/: orp_orp_PosixFile.c  orp_orp_PosixFile.h  orp_orp_PosixFile_ErrnoException.h
software/android/orp-android/app/src/main/res/values/: strings.xml
software/android/orp-android/dchat/: build.gradle
software/android/orp-android/dchat/src/main/: AndroidManifest.xml
software/android/orp-android/dchat/src/main/res/layout/: activity_chat.xml  activity_contacts.xml  activity_conversation.xml  activity_login.xml
software/android/orp-android/dchat/src/main/res/menu/: menu_chat.xml  menu_contacts.xml  menu_conversation.xml  menu_login.xml
software/android/orp-android/dchat/src/main/res/values/: strings.xml
software/applications/: demo.dox
software/applications/bundle-demo/: README.md  configure.ac
software/applications/bundle-demo/src/: Makefile.am  main.c
software/applications/orp-bulkencryption/: .gitignore  README.md  configure.ac
software/applications/orp-bulkencryption/include/: Makefile.am  bulkencryptionProto.h
software/applications/orp-bulkencryption/src/: Makefile.am  bulkencryption.c  bulkencryptionProto.c  bulkencryptionProto.tidl  main.c
software/applications/orp-encryptor/: .gitignore  README.md  configure.ac
software/applications/orp-encryptor/include/: Makefile.am  encProto.h
software/applications/orp-encryptor/src/: Makefile.am  encProto.c  encproto.tidl  encryptor.c  main.c
software/applications/orp-urchat/: configure.ac
software/applications/orp-urchat/include/: Makefile.am  chatProto.h
software/applications/orp-urchat/src/: Makefile.am  chatProto.c  chatproto.tidl  main.c  urchat.c
software/applications/orp-xts-encryptor/: README.md  configure.ac
software/applications/orp-xts-encryptor/include/: Makefile.am  xtsProto.h
software/applications/orp-xts-encryptor/src/: Makefile.am  main.c  xts-encryptor.c  xtsProto.c  xtsproto.tidl
software/demo/orp-xtsfs/: .gitignore  Makefile  README.md  dir_table.c  dir_table.h  orpfs.c  orpfs.h  orpio.c  orpio.h  tidl.c  tidl.h  xtsProto.c  xtsProto.h
software/os/mselOS/: .gdbinit  .gitignore  autotools_cleanup.sh  configure.ac  mselOS.dox  romgen.c  sim-launch-or1ksim.sh  sim-launch-qemu.sh  sim.cfg  test-driver
software/os/mselOS/include/: Makefile.am  msel.h  tidl.h
software/os/mselOS/include/crypto/: aes.h  aes_gcm.h  aes_xts.h  ecc.h  kdf.h  prng.h  sha2.h
software/os/mselOS/include/msel/: debug.h  endpoints.h  ffs.h  malloc.h  master_key.h  mtc.h  pol.h  provision.h  stdc.h  syscalls.h  tasks.h  uuid.h
software/os/mselOS/src/: Makefile.am  Makefile.inc
software/os/mselOS/src/arch/: Makefile.am  arch.h
software/os/mselOS/src/arch/arm/: Makefile.am  aes.c  arch.c  ecc.c  ffs.c  gpio.c  isr.c  isr.h  led.c  link.ld  link.ld.sf2  m3.h  master_key.c  mtc.c  nvm.h  sha.c  startup.S  task.c  trng.c  uart.c
software/os/mselOS/src/arch/openrisc/: Makefile.am  aes.c  arch.c  ecc.c  ffs.c  flash.c  flash.h  gpio.c  init.s  isr.c  led.c  link.ld  master_key.c  mmio.h  mtc.c  mtc.h  or1k.h  sha.c  spr.c  spr.h  stdc.c  trng.c  uart.c
software/os/mselOS/src/driver/: Makefile.am  aes_driver.c  aes_driver.h  ecc_driver.c  ecc_driver.h  ffs_driver.c  ffs_driver.h  ffs_session.c  ffs_session.h  gpio.c  gpio.h  led.c  led.h  master_key.c  mtc.c  mtc.h  pol.c  pol_int.h  provision.c  sha_driver.c  sha_driver.h  trng_driver.c  trng_driver.h  uart.c  uart.h
software/os/mselOS/src/driver/swcrypto/: ed521.c  ed521.h  sw_aes.c  sw_aes.h  sw_sha.c  sw_sha.h
software/os/mselOS/src/lib/: Makefile.am  tidl.c
software/os/mselOS/src/lib/crypto/: aes.c  aes_gcm.c  aes_xts.c  kdf.c  prng.c  sha2.c
software/os/mselOS/src/os/: Makefile.am  list.h  malloc.c  malloc_int.h  mutex.c  mutex.h  stdc.c  syscall.c  syscall.h  system.c  system.h  task.c  task.h  taskmem.c  taskmem.h  util.c  util.h
software/os/mselOS/tests/: .gitignore  Makefile.am  aes_test.c  aes_test.expect  aes_test.h  boot_test.c  ecc_test.c  ecc_test.expect  ffs_android.c  ffs_session.c  ffs_session.expect  mtc_test.c  mtc_test.expect  sha_test.c  sha_test.expect  task_malloc.c  task_malloc.expect  task_stack_overflow.c  task_stack_overflow.expect  throughput_test.c  uart_test.c  uart_test.expect  yield_loop.c  yield_loop.expect
software/os/mselOS/tests/common/: build_vars.in  test_harness.sh
software/tools/tidl/: .gitignore  Makefile  README.md  tidl.dox  tidlgen.cabal
software/tools/tidl/examples/: tidltest.tidl
software/tools/tidl/src/: Main.hs
software/tools/tidl/src/Tidl/: Ast.hs  Cfg.hs  Generate.hs  Parser.hs
software/tools/tidl/src/Tidl/Generate/: C.hs  Java.hs  Pretty.hs
(+94 files in other folders)
